<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/getInvolveActivityDrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cput.chauma.HomeActivity">

    <!--All content/design will be inside this layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/midBlue"
        android:orientation="vertical">

        <!--We are including the navigation actionbar we created-->
        <include
            layout="@layout/navigation_actionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/become_a_peer_educator"
                    android:textColor="@color/purple"
                    android:textStyle="bold"
                    android:textSize="25sp"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textSize="15sp"
                    android:text="@string/what_do_peer_educators_do"
                    android:textColor="@color/darkBlue"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="top|start"
                    android:text="@string/definition"
                    android:textSize="15sp" />

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="10dp">

                    <RadioButton
                        android:id="@+id/rdbMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="12dp"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/rdbFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="12dp"
                        android:text="@string/female" />

                    <RadioButton
                        android:id="@+id/rdbIntersex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="12dp"
                        android:text="@string/intersex" />

                    <RadioButton android:id="@+id/rdbPrivate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/privateGender"/>
                </RadioGroup>

                <EditText
                    android:id="@+id/txtPeerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:inputType="text"
                    android:hint="@string/name"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    android:padding="10dp"
                    android:background="@color/seaBlue"/>

                <EditText
                    android:id="@+id/txtPeerSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:inputType="text"
                    android:hint="@string/surname"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    android:padding="10dp"
                    android:background="@color/seaBlue"/>

                <EditText
                    android:id="@+id/txtPeerIdNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:inputType="phone"
                    android:hint="@string/identity_number"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    android:padding="10dp"
                    android:background="@color/seaBlue"/>

                <EditText
                    android:id="@+id/txtPeerContactNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:inputType="phone"
                    android:hint="@string/contact_number"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    android:padding="10dp"
                    android:background="@color/seaBlue"/>

                <EditText
                    android:id="@+id/txtPeerEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/e_mail_address"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    android:padding="10dp"
                    android:background="@color/seaBlue"/>

                <EditText
                    android:id="@+id/txtPeerStudentNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:inputType="phone"
                    android:hint="@string/student_number"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    android:padding="10dp"
                    android:background="@color/seaBlue"/>

                <EditText
                    android:id="@+id/txtPeerCourse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:inputType="text"
                    android:hint="@string/course"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    android:padding="10dp"
                    android:background="@color/seaBlue"/>

                <EditText
                    android:id="@+id/txtPeerYearOfStudy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:inputType="text"
                    android:hint="@string/year_of_study"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    android:padding="10dp"
                    android:background="@color/seaBlue"/>

                <Button
                    android:id="@+id/btnPeerApply"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/darkBlue"
                    android:onClick="onClick"
                    android:text="@string/apply"
                    android:textColor="#fff"
                    android:textSize="15sp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <!--Adding the side navigation view with the list of toolbar_options items-->
    <android.support.design.widget.NavigationView
        android:id="@+id/navigationViewLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>