<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/askQuestionActivityDrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cput.chauma.HomeActivity">

    <!--All content/design will be inside this layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--We are including the navigation actionbar we created-->
        <include
            layout="@layout/navigation_actionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/midBlue">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/seaBlue"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txtSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/seaBlue"
                    android:hint="@string/surname"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/seaBlue"
                    android:hint="@string/e_mail_address"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txtMessage"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:layout_gravity="top|center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/seaBlue"
                    android:hint="@string/message"
                    android:inputType="text|textMultiLine"
                    android:padding="10dp"
                    android:gravity="top|left"
                    android:scrollHorizontally="false"
                    android:scrollbars="vertical"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/darkBlue"
                    android:text="@string/send"
                    android:textColor="#fff"
                    android:textSize="20sp" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <!--Adding the side navigation view with the list of toolbar_options items-->
    <android.support.design.widget.NavigationView
        android:id="@+id/navigationViewLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>